css: Fix case where we didn't convert pt => px

Fixes gtk_widget_override_font() not behaving properly since commit
df08fc91bdc1d2e4c866122304fabe4dd298a7de.

https://bugzilla.gnome.org/show_bug.cgi?id=768902